# web-a2e

./: .clangd  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  CODE_REVIEW_PLAN.md  LICENSE  README.md  docker-compose.staging.yml  package-lock.json  package.json  vite.config.js
.claude/: settings.local.json
.claude/skills/emma/: SKILL.md
.github/workflows/: DEPLOYMENT.md  deploy.yml
build-native/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  klaus_6502_test  klaus_65c02_test  thunderclock_mmu_test  thunderclock_test
build-native/Testing/Temporary/: CTestCostData.txt
docs/: basic-rom-disassembly.md  softswitch-comparison.md  thunderclock-debug.md
examples/: hello.s  scroll.s
mcp/a2e-agent/: README.md  package.json
mcp/a2e-agent/src/: http-server.js  index.js  logger.js  mcp-server.js
mcp/appleii-agent/: .gitignore  README.md  package-lock.json  package.json
mcp/appleii-agent/src/: http-server.js  index.js  logger.js  mcp-server.js
plugins/: serial-proxy-plugin.js
public/: _headers  audio-worklet.js  index.html  llms.txt  manifest.json  styles.css  sw.js
public/css/: assembler-editor.css  base.css  basic-debugger.css  basic-editor.css  controls.css  cpu-debugger.css  debug-windows.css  disk-drives.css  disk-library.css  documentation.css  file-explorer.css  hard-drive.css  layout.css  modals.css  monitor.css  responsive.css  save-states.css  settings-windows.css
public/disks/: library.json
public/docs/llms/: llm-assembler.txt  llm-basic-program.txt  llm-disk-drives.txt  llm-file-explorer.txt  llm-hard-drives.txt  llm-main.txt  llm-slot-configuration.txt
public/shaders/: crt.glsl  edge.glsl
scripts/: generate_roms.sh
src/bindings/: wasm_interface.cpp
src/core/: emulator.cpp  emulator.hpp  emulator_debug.cpp  emulator_state.cpp  noslot_clock.cpp  noslot_clock.hpp  types.hpp
src/core/assembler/: assembler.cpp  assembler.hpp
src/core/audio/: audio.cpp  audio.hpp
src/core/basic/: basic_detokenizer.cpp  basic_detokenizer.hpp  basic_tokenizer.cpp  basic_tokenizer.hpp  basic_tokens.hpp
src/core/cards/: disk2_card.cpp  disk2_card.hpp  expansion_card.hpp  mockingboard_card.cpp  mockingboard_card.hpp  mouse_card.cpp  mouse_card.hpp  softcard_z80.cpp  softcard_z80.hpp  thunderclock_card.cpp  thunderclock_card.hpp
src/core/cpu/: cpu6502.cpp  cpu6502.hpp
src/core/debug/: condition_evaluator.cpp  condition_evaluator.hpp
src/core/disassembler/: disassembler.cpp  disassembler.hpp
src/core/disk/: disk2.cpp  disk2.hpp  disk_image.hpp  dsk_disk_image.cpp  dsk_disk_image.hpp  gcr_encoding.cpp  gcr_encoding.hpp  woz_disk_image.cpp  woz_disk_image.hpp
src/core/disk-image/: disk2.cpp  disk2.hpp  disk_image.hpp  dsk_disk_image.cpp  dsk_disk_image.hpp  gcr_encoding.cpp  gcr_encoding.hpp  woz_disk_image.cpp  woz_disk_image.hpp
src/core/emulator/: emulator_debug.cpp  emulator_state.cpp
src/core/filesystem/: dos33.cpp  dos33.hpp  pascal.cpp  pascal.hpp  prodos.cpp  prodos.hpp
src/core/input/: keyboard.cpp  keyboard.hpp
src/core/mmu/: mmu.cpp  mmu.hpp
src/core/mockingboard/: ay8910.cpp  ay8910.hpp  mockingboard.cpp  mockingboard.hpp  via6522.cpp  via6522.hpp
src/core/video/: video.cpp  video.hpp
src/core/z80/: z80.cpp  z80_opcodes_cb.cpp  z80_opcodes_ed.cpp  z80_opcodes_fd.cpp
src/css/: assembler-editor.css  base.css  basic-debugger.css  basic-editor.css  controls.css  debug-base.css  debug-windows.css  disk-drives.css  docking.css  documentation.css  file-explorer.css  fullscreen-popouts.css  hard-drive.css  layout.css  memory-windows.css  modals.css  monitor.css  release-notes.css  rule-builder.css  settings-windows.css  window-switcher.css
src/js/: ReleaseNotesWindow.js  TextSelection.js  audio-driver.js  debugger.js  disk-manager.js  display-settings.js  input-handler.js  main.js  release-notes.js  state-persistence.js  version.js  webgl-renderer.js
src/js/agent/: agent-manager.js  agent-tools.js  agent-version-tools.js  assembler-tools.js  basic-program-tools.js  disk-tools.js  emulator-names-list.js  file-explorer-tools.js  index.js  main-tools.js  slot-tools.js  smartport-tools.js  window-tools.js
src/js/audio/: audio-driver.js  audio-worklet.js  index.js
src/js/config/: default-layout.js  feature-flags.js  release-notes.json  version.js
src/js/data/: apple2-rom-routines.js
src/js/debug/: BasicProgramWindow.js  CPUDebuggerWindow.js  DebugWindow.js  DisplaySettingsWindow.js  DriveDetailWindow.js  JoystickWindow.js  MemoryBrowserWindow.js  (+30 more)
test/: check-rom.js  crash-trace.js  gcr-test
tests/common/: basic_program_builder.cpp  basic_program_builder.hpp  disk_image_builder.cpp  disk_image_builder.hpp  test_helpers.hpp
tests/gcr/: gcr-test.cpp
tests/integration/: compare-boot.js  disk-boot-test.js  memory-crash.js  nibble-read-test.js  phase-test.js  test_emulator.cpp  test_emulator_basic.cpp  test_emulator_debug.cpp  test_emulator_disk.cpp  test_emulator_state.cpp  test_ssc.cpp
tests/klaus/: klaus_6502_test.cpp  klaus_65c02_test.cpp
tests/thunderclock/: thunderclock_mmu_test.cpp  thunderclock_test.cpp
tests/unit/: test_assembler.cpp  test_audio.cpp  test_ay8910.cpp  test_basic_detokenizer.cpp  test_basic_tokenizer.cpp  test_block_device.cpp  test_condition_evaluator.cpp  test_cpu6502.cpp  test_cpu_addressing.cpp  test_cpu_cycle_counts.cpp  test_cpu_decimal.cpp  test_cpu_interrupts.cpp  test_disassembler.cpp  test_disk2_card.cpp  test_dos33.cpp  test_dsk_disk_image.cpp  test_expansion_card.cpp  test_gcr_encoding.cpp  test_keyboard.cpp  test_mmu.cpp  test_mmu_slots.cpp  test_mockingboard.cpp  test_mouse_card.cpp  test_pascal.cpp  test_prodos.cpp  test_smartport_card.cpp  test_thunderclock.cpp  test_via6522.cpp  test_video.cpp  test_woz_disk_image.cpp
wiki/: AI-Agent.md  Architecture-Overview.md  Audio-System.md  CPU-Emulation.md  Debugger.md  Disk-Drives.md  Disk-System-Internals.md  Display-Settings.md  Expansion-Slots.md  File-Explorer.md  Getting-Started.md  Home.md  Input-Devices.md  Keyboard-Shortcuts.md  Memory-System.md  Save-States.md  Video-Rendering.md
(+151 files in other folders)
